--- a/model/pom.xml
+++ b/model/pom.xml
@@ -165,7 +165,7 @@
 		</dependency>
 		<dependency>
 			<groupId>net.sf.saxon</groupId>
-			<artifactId>saxon-dom</artifactId>
+			<artifactId>Saxon-HE</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
