--- a/pom.xml
+++ b/pom.xml
@@ -468,7 +468,7 @@
 			<dependency>
 				<groupId>org.jibx</groupId>
 				<artifactId>jibx-extras</artifactId>
-				<version>1.4.2</version>
+				<version>1.4.5</version>
 				<exclusions>
 					<exclusion>
 						<groupId>xml-apis</groupId>
@@ -674,6 +674,7 @@
 			</dependency>
 
 			<!-- Saxon -->
+            <!--
 			<dependency>
 				<groupId>net.sf.saxon</groupId>
 				<artifactId>saxon</artifactId>
@@ -684,6 +685,13 @@
 				<artifactId>saxon-dom</artifactId>
 				<version>8.7</version>
 			</dependency>
+			-->
+
+            <dependency>
+                <groupId>net.sf.saxon</groupId>
+                <artifactId>Saxon-HE</artifactId>
+                <version>12.9</version>
+            </dependency>
 
 			<!-- Swagger/Springdoc -->
 			<dependency>
