--- a/transformationManager/pom.xml
+++ b/transformationManager/pom.xml
@@ -80,7 +80,7 @@
 		</dependency>
 		<dependency>
 			<groupId>net.sf.saxon</groupId>
-			<artifactId>saxon-dom</artifactId>
+			<artifactId>Saxon-HE</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.jsoup</groupId>
