A lot of test fixes

--- a/cone/src/test/resources/pubman.properties
+++ b/cone/src/test/resources/pubman.properties
@@ -47,10 +47,10 @@ inge.cone.querier.class=de.mpg.mpdl.inge.cone.SQLQuerier
 # CoNE database configuration
 inge.cone.database.driver.class=${inge.cone.database.driver.class}
 inge.cone.database.server.name=${inge.cone.database.server.name.test}
-inge.cone.database.server.port=${inge.cone.database.server.port}
-inge.cone.database.name=${inge.cone.database.name}
-inge.cone.database.user.name=${inge.cone.database.user.name}
-inge.cone.database.user.password=${inge.cone.database.user.password}
+inge.cone.database.server.port=${inge.cone.database.server.port.test}
+inge.cone.database.name=${inge.cone.database.name.test}
+inge.cone.database.user.name=${inge.cone.database.user.name.test}
+inge.cone.database.user.password=${inge.cone.database.user.password.test}
 
 # CoNE default language abbreviation
 inge.cone.language.default=${inge.cone.language.default}
