--- a/pubman_logic/src/test/resources/pubman.properties
+++ b/pubman_logic/src/test/resources/pubman.properties
@@ -38,3 +38,14 @@ inge.database.user.password=${inge.database.user.password}
 inge.filestorage.oai.filesystem_path=${inge.filestorage.oai.filesystem_path}
 
 inge.cron.cleanup_staging_files=${inge.cron.cleanup_staging_files}
+inge.cron.init_search_index_fields=${inge.cron.init_search_index_fields}
+inge.cron.init_ip_list=${inge.cron.init_ip_list}
+inge.cron.fix_broken_imports=${inge.cron.fix_broken_imports}
+inge.cron.fix_broken_imports.hours=${inge.cron.fix_broken_imports.hours}
+inge.cron.refresh_cone_cache=${inge.cron.refresh_cone_cache}
+inge.cron.pubman.sitemap=${inge.cron.pubman.sitemap}
+inge.pubman.sitemap.max.items=${inge.pubman.sitemap.max.items}
+inge.pubman.sitemap.retrieve.items=${inge.pubman.sitemap.retrieve.items}
+inge.pubman.genres.configuration=${inge.pubman.genres.configuration}
+
+inge.rest.service.url=${inge.rest.service.url}
