--- a/pubman_logic/pom.xml
+++ b/pubman_logic/pom.xml
@@ -46,8 +46,8 @@
 					<clusterName>testCluster</clusterName>
 					<transportPort>9500</transportPort>
 					<httpPort>9400</httpPort>
-					<version>8.18.0</version>
-					<pathInitScript>${project.build.testOutputDirectory}/es_scripts/createIndex.script</pathInitScript>
+					<version>9.2.1</version>
+					<!--<pathInitScript>${project.build.testOutputDirectory}/es_scripts/createIndex.script</pathInitScript>-->
 					<skip>${maven.test.skip}</skip>
 					<environmentVariables>
 						<ES_TMPDIR>${project.build.testOutputDirectory}</ES_TMPDIR>
