--- a/pubman_logic/src/test/resources/hibernate.properties
+++ b/pubman_logic/src/test/resources/hibernate.properties
@@ -10,3 +10,4 @@ hibernate.hbm2ddl.auto=create
 
 #Use Hibernate 5.3 compatible naming strategy -> https://docs.jboss.org/hibernate/orm/6.0/migration-guide/migration-guide.html
 hibernate.id.db_structure_naming_strategy=legacy
+hibernate.hbm2ddl.import_files=/db_scripts/import_new.sql
