--- a/pubman_logic/pom.xml
+++ b/pubman_logic/pom.xml
@@ -32,6 +32,26 @@
 					</archive>
 				</configuration>
 			</plugin>
+            <!-- Generate Genre Bundle Files under "/genreBundles" from Genres.xml -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+
+                </executions>
+                <configuration>
+                    <mainClass>de.mpg.mpdl.inge.service.util.GenreBundlesGenerator</mainClass>
+                    <arguments>
+                        <argument>${project.build.outputDirectory}</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
