--- a/pom.xml
+++ b/pom.xml
@@ -731,6 +731,14 @@
 				<artifactId>reflections</artifactId>
 				<version>0.10.2</version>
 			</dependency>
+
+            <!-- Test Containers -->
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>elasticsearch</artifactId>
+                <version>1.19.7</version>
+                <scope>test</scope>
+            </dependency>
 		</dependencies>
 
 	</dependencyManagement>
