Update pubman.properties of transformation test

--- a/transformationManager/src/test/resources/pubman.properties
+++ b/transformationManager/src/test/resources/pubman.properties
@@ -10,10 +10,10 @@ inge.cone.service.url=${inge.cone.service.url.test}
 # eSciDoc-ObjId of the root of the OU tree (used for edoc import)
 inge.pubman.root.organization.id=${inge.pubman.root.organization.id}
 
-inge.pubman.instance.url=${inge.pubman.instance.url}
-inge.pubman.instance.context.path=${inge.pubman.instance.context.path}
-inge.pubman.component.pattern=${inge.pubman.component.pattern}
-inge.pubman.item.pattern=${inge.pubman.item.pattern}
+inge.pubman.instance.url=http://localhost:8080
+inge.pubman.instance.context.path=/pubman
+inge.pubman.component.pattern=/item/$1/component/$2/$3
+inge.pubman.item.pattern=/item/$1
 
 # Transformation stylesheets
 
