--- a/pom.xml
+++ b/pom.xml
@@ -747,6 +747,11 @@
                 <version>1.19.7</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-slf4j2-impl</artifactId>
+                <version>2.23.1</version>
+            </dependency>
 		</dependencies>
 
 	</dependencyManagement>
