--- a/pubman_logic/pom.xml
+++ b/pubman_logic/pom.xml
@@ -191,6 +191,11 @@
             <artifactId>elasticsearch</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+            <scope>test</scope>
+        </dependency>
 
 	</dependencies>
 
