Integrate PostgreSQL Testcontainers for tests

--- a/inge_db_connector/src/test/resources/db_connector.properties
+++ b/inge_db_connector/src/test/resources/db_connector.properties
@@ -1,6 +1,7 @@
 inge.database.driver.class=${inge.database.driver.class}
-inge.database.jdbc.url=${inge.database.jdbc.url.test}
-inge.database.user.name=${inge.database.user.name}
-inge.database.user.password=${inge.database.user.password}
+#Set by test
+inge.database.jdbc.url=
+inge.database.user.name=test-user
+inge.database.user.password=test
 
 
