--- a/inge_db_connector/pom.xml
+++ b/inge_db_connector/pom.xml
@@ -131,6 +131,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 </project>
