--- a/inge_db_connector/src/test/resources/hibernate.properties
+++ b/inge_db_connector/src/test/resources/hibernate.properties
@@ -1,12 +1,12 @@
-hibernate.dialect=de.mpg.mpdl.inge.db.spring.JsonPostgreSQL9Dialect
 hibernate.cache.use_second_level_cache=true
 hibernate.cache.use_query_cache=true
-hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+hibernate.cache.region.factory_class=jcache
+hibernate.javax.cache.provider=org.ehcache.jsr107.EhcacheCachingProvider
+hibernate.javax.cache.uri=ehcache.xml
 hibernate.jdbc.time_zone=UTC
 #Speed up startup, do not load all metadata from database
-hibernate.temp.use_jdbc_metadata_defaults=false
+hibernate.temp.use_jdbc_metadata_defaults=true
 
 # Test-specific properties:
 hibernate.hbm2ddl.import_files=/db_scripts/import_new.sql
 hibernate.hbm2ddl.auto=create
-show_sql=true
