--- a/inge_es_connector/src/test/resources/es_connector.properties
+++ b/inge_es_connector/src/test/resources/es_connector.properties
@@ -1,7 +1,7 @@
-inge.es.rest.host-port=${inge.es.rest.host-port.test}
-inge.es.rest.path-prefix=${inge.es.rest.path-prefix.test}
-inge.es.user=${inge.es.user}
-inge.es.password=${inge.es.password}
+inge.es.rest.host-port=
+inge.es.rest.path-prefix=
+inge.es.user=
+inge.es.password=
 
 inge.index.context.name=${inge.index.context.name}
 inge.index.context.type=${inge.index.context.type}
