--- a/pom.xml
+++ b/pom.xml
@@ -743,9 +743,10 @@
             <!-- Test Containers -->
             <dependency>
                 <groupId>org.testcontainers</groupId>
-                <artifactId>elasticsearch</artifactId>
-                <version>1.19.7</version>
-                <scope>test</scope>
+                <artifactId>testcontainers-bom</artifactId>
+                <version>1.21.3</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
@@ -955,15 +956,12 @@
 		<inge.cron.refresh_cone_cache>3600000</inge.cron.refresh_cone_cache>
 		<inge.crossref.pid>pure-support@listsrv.mpg.de</inge.crossref.pid>
 		<inge.database.driver.class>org.postgresql.Driver</inge.database.driver.class>
-		<inge.database.jdbc.url.test>jdbc:postgresql://localhost:5432/inge_test</inge.database.jdbc.url.test>
 		<inge.doi.service.create.url>/doxi/rest/doi</inge.doi.service.create.url>
 		<inge.doi.service.use>true</inge.doi.service.use>
 		<inge.es.password></inge.es.password>
-		<inge.es.rest.host-port.test>http://localhost:9400</inge.es.rest.host-port.test>
 		<inge.es.rest.host-port>http://localhost:9200</inge.es.rest.host-port>
 		<inge.es.rest.path-prefix></inge.es.rest.path-prefix>
 		<inge.es.user></inge.es.user>
-		<inge.es.rest.path-prefix.test />
 		<inge.es.rest.path-prefix />
 		<inge.filestorage.filesystem_path>/standalone/data/inge_files/</inge.filestorage.filesystem_path>
 		<inge.filestorage.oai.filesystem_path>/standalone/data/inge_oai_files/</inge.filestorage.oai.filesystem_path>
