--- a/pubman_logic/src/test/resources/pubman.properties
+++ b/pubman_logic/src/test/resources/pubman.properties
@@ -3,10 +3,11 @@ inge.auth.mpg.ip.use=${inge.auth.mpg.ip.use}
 
 inge.cone.cache.use=${inge.cone.cache.use}
 
-inge.es.rest.host-port=${inge.es.rest.host-port.test}
-inge.es.rest.path-prefix=${inge.es.rest.path-prefix.test}
-inge.es.user=${inge.es.user}
-inge.es.password=${inge.es.password}
+#Set by tests
+inge.es.rest.host-port=
+inge.es.rest.path-prefix=
+inge.es.user=
+inge.es.password=
 
 inge.index.context.name=${inge.index.context.name}
 inge.index.context.type=${inge.index.context.type}
@@ -31,9 +32,10 @@ inge.pubman.instance.context.path=${inge.pubman.instance.context.path}
 inge.pubman.item.pattern=${inge.pubman.item.pattern}
 
 inge.database.driver.class=${inge.database.driver.class}
-inge.database.jdbc.url=${inge.database.jdbc.url.test}
-inge.database.user.name=${inge.database.user.name}
-inge.database.user.password=${inge.database.user.password}
+#Set by tests
+inge.database.jdbc.url=
+inge.database.user.name=test-user
+inge.database.user.password=test
 
 inge.filestorage.oai.filesystem_path=${inge.filestorage.oai.filesystem_path}
 
